--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -2,7 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: k8sbfr-ingress-hello-node
-  namespace: k8sbfr-hello-node
+  #namespace: k8sbfr-hello-node
+  namespace: ingress-nginx
 spec:
   rules:
     - host: k8sbfr.zapto.org
