--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -13,5 +13,5 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: k8sbfr-hello-node
+                name: services/k8sbfr-hello-node
                 port: 8080
