--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -5,6 +5,7 @@ metadata:
   #namespace: k8sbfr-hello-node
   namespace: ingress-nginx
 spec:
+  ingressClassName: nginx
   rules:
     - host: k8sbfr.zapto.org
       http:
@@ -14,4 +15,4 @@ spec:
             backend:
               service:
                 name: k8sbfr-hello-node
-                port: 80
+                port: 8080
