--- a/k8sbfr-hello-node/external-svc-hello-node.yaml
+++ b/k8sbfr-hello-node/external-svc-hello-node.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: external-k8s-hello-node
+  name: k8s-hello-node
 spec:
   type: ExternalName
-  externalName: k8sbfr-hello-node.k8sbfr-hello-node.svc.cluster.local
+  externalName: external-k8sbfr-hello-node.k8sbfr-hello-node.svc.cluster.local
