--- a/k8sbfr-hello-node/external-svc-hello-node.yaml
+++ b/k8sbfr-hello-node/external-svc-hello-node.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: k8s-hello-node
+  namespace: k8s-hello-node
 spec:
   type: ExternalName
   externalName: external-k8sbfr-hello-node.k8sbfr-hello-node.svc.cluster.local
