--- a/k8sbfr-hello-node/external-svc-hello-node.yaml
+++ b/k8sbfr-hello-node/external-svc-hello-node.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: k8s-hello-node
-  namespace: k8s-hello-node
+  name: k8sbfr-hello-node
+  namespace: k8sbfr-hello-node
 spec:
   type: ExternalName
   externalName: external-k8sbfr-hello-node.k8sbfr-hello-node.svc.cluster.local
