update ingress k8sbfr-my-ingress

--- a/k8sbfr-hello-node/external-svc-hello-node.yaml
+++ b/k8sbfr-hello-node/external-svc-hello-node.yaml
@@ -6,3 +6,5 @@ metadata:
 spec:
   type: ExternalName
   externalName: k8sbfr-hello-node.k8sbfr-hello-node.svc.cluster.local
+  selector:
+    app: k8sbfr-hello-node
