--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -14,6 +14,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: services/external-k8sbfr-hello-node
+                name: external-k8sbfr-hello-node
+                namespace: k8sbfr-hello-node
                 port: 
                   number: 8080
