--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -15,6 +15,6 @@ spec:
             backend:
               service:
                 name: external-k8sbfr-hello-node
-                namespace: k8sbfr-hello-node
+                #namespace: k8sbfr-hello-node
                 port: 
                   number: 8080
