--- a/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
@@ -13,7 +13,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: k8sbfr-hello-node/k8sbfr-hello-node
+                name: k8sbfr-hello-node
                 port:
                   number: 80
               #namespace: k8sbfr-hello-node
