update ingress k8sbfr-my-ingress

--- a/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: k8sbfr-my-ingress
   namespace: ingress-nginx
+  IngressClas: nginx
 spec:
   rules:
     - host: k8sbfr.zapto.org
