--- a/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
@@ -1,10 +1,9 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
-IngressClass: nginx
 metadata:
   name: k8sbfr-my-ingress
   namespace: ingress-nginx
-  #IngressClas: nginx
+  IngressClas: nginx
 spec:
   rules:
     - host: k8sbfr.zapto.org
