--- a/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
@@ -1,10 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
-IngressClas: nginx
 metadata:
   name: k8sbfr-my-ingress
   namespace: ingress-nginx
 spec:
+  ingressClassName: nginx
   rules:
     - host: k8sbfr.zapto.org
       http:
