--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -16,6 +16,6 @@ spec:
               service:
                 #name: external-k8sbfr-hello-node
                 name: k8sbfr-hello-node
-                #namespace: k8sbfr-hello-node
+                namespace: k8sbfr-hello-node
                 port: 
                   number: 80
