update ingress k8sbfr-my-ingress

--- a/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
@@ -13,10 +13,10 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: services/k8sbfr-hello-node
+                name: k8sbfr-hello-node
                 port:
                   number: 80
-              #namespace: k8sbfr-hello-node
+              namespace: k8sbfr-hello-node
           - path: /popote
             pathType: Prefix
             backend:
