--- a/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-my-ingress.yaml
@@ -16,7 +16,7 @@ spec:
                 name: k8sbfr-hello-node
                 port:
                   number: 80
-              namespace: k8sbfr-hello-node
+              #namespace: k8sbfr-hello-node
           - path: /popote
             pathType: Prefix
             backend:
