--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: k8sbfr.zapto.org
+    #- host: k8sbfr.zapto.org
+    - host: *
       http:
         paths:
           - path: /hello
