--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -7,11 +7,12 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    #- host: k8sbfr.zapto.org
-    - host: *
+    - host: k8sbfr.zapto.org
+    #- host: *
       http:
         paths:
-          - path: /hello
+          - path: *
+          #- path: /hello
             pathType: Prefix
             backend:
               service:
