debug routage http

--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -11,7 +11,7 @@ spec:
     #- host: *
       http:
         paths:
-          - path: *
+          - path: /*
           #- path: /hello
             pathType: Prefix
             backend:
