debug routage http

--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -11,8 +11,8 @@ spec:
     #- host: *
       http:
         paths:
-          - path: /*
-          #- path: /hello
+          #- path: /*
+          - path: /hello
             pathType: Prefix
             backend:
               service:
