--- a/k8sbfr-hello-node/svc-hello-node.yaml
+++ b/k8sbfr-hello-node/svc-hello-node.yaml
@@ -10,7 +10,7 @@ spec:
     app: k8sbfr-hello-node
   ports:
     #- protocol: TCP
-    - protocol: HTTP
+    - protocol: TCP
       port: 8080
       targetPort: 80
 
