debug routage http

--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -19,5 +19,5 @@ spec:
                 #name: external-k8sbfr-hello-node
                 name: k8sbfr-hello-node
                 #namespace: k8sbfr-hello-node
-                # port: 
-                #   number: 80
+                port: 
+                  number: 8080
