--- a/k8sbfr-hello-node/svc-hello-node.yaml
+++ b/k8sbfr-hello-node/svc-hello-node.yaml
@@ -9,8 +9,8 @@ spec:
   selector:
     app: k8sbfr-hello-node
   ports:
-    #- protocol: TCP
     - protocol: TCP
-      port: 8080
+    #- protocol: HTTP
+      port: 80
       targetPort: 8080
 
