--- a/k8sbfr-my-ingress/k8sbfr-ingress-class.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-ingress-class.yaml
@@ -3,4 +3,5 @@ kind: IngressClass
 metadata:
   name: nginx
 spec:
-  controller: nginx.org/ingress-controller
+  #controller: nginx.org/ingress-controller
+  controleur: services/ingress-nginx-controller
