--- a/k8sbfr-my-ingress/k8sbfr-ingress-class.yaml
+++ b/k8sbfr-my-ingress/k8sbfr-ingress-class.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1beta1
 kind: IngressClass
 metadata:
   name: nginx
+  namespace: ingress-nginx
 spec:
-  controller: nginx.org/ingress-controller
-  
+  #controller: nginx.org/ingress-controller
+  controleur: services/ingress-nginx-controller
