--- a/k8sbfr-hello-node/svc-hello-node.yaml
+++ b/k8sbfr-hello-node/svc-hello-node.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: k8sbfr-hello-node
 spec:
   # externalTrafficPolicy: Local
-  type: clusterIP
+  type: ClusterIP
   selector:
     app: k8sbfr-hello-node
   ports:
