--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -1,4 +1,5 @@
-apiVersion: networking.k8s.io/v1
+#apiVersion: networking.k8s.io/v1
+apiVersion: v1
 kind: Ingress
 metadata:
   name: k8sbfr-ingress-hello-node
