--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -1,10 +1,9 @@
 #apiVersion: networking.k8s.io/v1
-apiVersion: extensions/v1beta1
+apiVersion: v1
 kind: Ingress
 metadata:
   name: k8sbfr-ingress-hello-node
-  #namespace: k8sbfr-hello-node
-  #namespace: ingress-nginx
+  namespace: k8sbfr-hello-node
 spec:
   ingressClassName: nginx
   rules:
@@ -21,6 +20,5 @@ spec:
               service:
                 #name: external-k8sbfr-hello-node
                 name: k8sbfr-hello-node
-                #namespace: k8sbfr-hello-node
                 port: 
                   number: 8080
