--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -7,18 +7,16 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: 
-      - k8sbfr.zapto.org
-      - localhost
-    #- host: *
-      http:
-        paths:
-          #- path: /*
-          - path: /hello
-            pathType: Prefix
-            backend:
-              service:
-                #name: external-k8sbfr-hello-node
-                name: k8sbfr-hello-node
-                port: 
-                  number: 8080
+    # - host: 
+    #   - k8sbfr.zapto.org
+    #   - localhost
+    - http:
+      paths:
+        - path: /hello
+          pathType: Prefix
+          backend:
+            service:
+              #name: external-k8sbfr-hello-node
+              name: k8sbfr-hello-node
+              port: 
+                number: 8080
