--- a/install-ingress-nginx/ingress-k8sbfr.yaml
+++ b/install-ingress-nginx/ingress-k8sbfr.yaml
@@ -7,21 +7,21 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
-  ingressClassName: nginx
+  ingressClassName: k8sbfr-nginx
   rules:
   - http:
       paths:
-      - path: /popote(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: popote-service
-            port:
-              number: 8080
+      # - path: /popote(/|$)(.*)
+      #   pathType: Prefix
+      #   backend:
+      #     service:
+      #       name: popote-service
+      #       port:
+      #         number: 8080
       - path: /(.*)
         pathType: Prefix
         backend:
           service:
-            name: demo
+            name: k8sbfr-hello-node
             port:
               number: 80
