--- a/install-ingress-nginx/k8sbfr-ingress.yaml
+++ b/install-ingress-nginx/k8sbfr-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: k8sbfr.zapto.org
+  name: k8sbfr-ingress
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
