--- a/install-ingress-nginx/k8sbfr-ingress.yaml
+++ b/install-ingress-nginx/k8sbfr-ingress.yaml
@@ -18,7 +18,7 @@ spec:
       #       name: popote-service
       #       port:
       #         number: 8080
-      - path: /(.*)
+      - path: /
         pathType: Prefix
         backend:
           service:
