--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -1,8 +1,12 @@
-#apiVersion: networking.k8s.io/v1
-apiVersion: v1
+apiVersion: networking.k8s.io/v1
+#apiVersion: v1
 kind: Ingress
 metadata:
   name: k8sbfr-ingress-hello-node
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
   # namespace: k8sbfr-hello-node
 spec:
   ingressClassName: k8sbfr-nginx
