ajout script installation d'applications

--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   ingressClassName: k8sbfr-nginx
   rules:
-    - host: 
+    - hosts: 
       - k8sbfr.zapto.org
       - localhost
     - http:
