--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -11,12 +11,9 @@ metadata:
 spec:
   ingressClassName: k8sbfr-nginx
   rules:
-    - hosts: 
-      - k8sbfr.zapto.org
-      - localhost
+    - hosts: k8sbfr.zapto.org
     - http:
-      paths:
-        - path: /hello
+      path: /hello
           pathType: Prefix
           backend:
             service:
