--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -13,11 +13,12 @@ spec:
   rules:
     - hosts: k8sbfr.zapto.org
     - http:
-      path: /hello
-        pathType: Prefix
-        backend:
-          service:
-            #name: external-k8sbfr-hello-node
-            name: k8sbfr-hello-node
-            port: 
-              number: 8080
+      paths:
+        - path: /hello
+          pathType: Prefix
+          backend:
+            service:
+              #name: external-k8sbfr-hello-node
+              name: k8sbfr-hello-node
+              port: 
+                number: 8080
