--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -8,7 +8,7 @@ metadata:
   #   nginx.ingress.kubernetes.io/use-regex: "true"
   #   nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
-  ingressClassName: k8sbfr-nginx
+  # ingressClassName: k8sbfr-nginx
   rules:
     # - hosts: 
     #   - k8sbfr.zapto.org
@@ -23,3 +23,16 @@ spec:
               name: k8sbfr-hello-node
               port: 
                 number: 8080
+
+
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /testpath
+        pathType: Prefix
+        backend:
+          service:
+            name: test
+            port:
+              number: 80
