update ingress hello-node

--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -9,6 +9,7 @@ metadata:
   #   nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   # ingressClassName: k8sbfr-nginx
+  ingressClassName: nginx
   rules:
     # - hosts: 
     #   - k8sbfr.zapto.org
