--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -7,9 +7,11 @@ metadata:
   #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
   #   nginx.ingress.kubernetes.io/use-regex: "true"
   #   nginx.ingress.kubernetes.io/rewrite-target: /$2
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   # ingressClassName: k8sbfr-nginx
-  ingressClassName: nginx
+  # ingressClassName: nginx
   rules:
     # - hosts: 
     #   - k8sbfr.zapto.org
