update ingress hello-node

--- a/k8sbfr-hello-node/ingress-hello-node.yaml
+++ b/k8sbfr-hello-node/ingress-hello-node.yaml
@@ -16,13 +16,13 @@ spec:
     # - hosts: 
     #   - k8sbfr.zapto.org
     - host: k8sbfr.zapto.org
-    - http:
-      paths:
-        - path: /hello
-          pathType: Prefix
-          backend:
-            service:
-              #name: external-k8sbfr-hello-node
-              name: k8sbfr-hello-node
-              port: 
-                number: 8080
+      http:
+        paths:
+          - path: /hello
+            pathType: Prefix
+            backend:
+              service:
+                #name: external-k8sbfr-hello-node
+                name: k8sbfr-hello-node
+                port: 
+                  number: 8080
