--- a/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
+++ b/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
@@ -2,27 +2,17 @@ apiVersion: networking.k8s.io/v1
 #apiVersion: v1
 kind: Ingress
 metadata:
-  name: k8sbfr-kube-web-view
-  # annotations:
-  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
-  #   nginx.ingress.kubernetes.io/use-regex: "true"
-  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  name: k8sbfr-kubWebView
 spec:
-  # ingressClassName: k8sbfr-nginx
   ingressClassName: nginx
   rules:
-    # - hosts: 
-    #   - k8sbfr.zapto.org
     - host: k8sbfr.zapto.org
       http:
         paths:
-          - path: /webView
+          - path: /kubeWebView
             pathType: Prefix
             backend:
               service:
-                #name: external-k8sbfr-hello-node
                 name: kube-web-view
                 port: 
-                  number: 8080
+                  number: 80
