--- a/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
+++ b/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
@@ -2,14 +2,14 @@ apiVersion: networking.k8s.io/v1
 #apiVersion: v1
 kind: Ingress
 metadata:
-  name: k8sbfr-kubWebView
+  name: k8sbfr-kubwebview
 spec:
   ingressClassName: nginx
   rules:
     - host: k8sbfr.zapto.org
       http:
         paths:
-          - path: /kubeWebView
+          - path: /kubewebview
             pathType: Prefix
             backend:
               service:
