--- a/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
+++ b/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 #apiVersion: v1
 kind: Ingress
 metadata:
-  name: k8sbfr-kubwebview
+  name: k8sbfr-ingress-kubwebview
 spec:
   ingressClassName: nginx
   rules:
