--- a/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
+++ b/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: k8sbfr.zapto.org
+    # - host: k8sbfr.zapto.org
+    - host: *
       http:
         paths:
           - path: /kubewebview
