mise a jour install kube-web-view

--- a/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
+++ b/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
@@ -7,8 +7,8 @@ spec:
   ingressClassName: nginx
   rules:
     # - host: k8sbfr.zapto.org
-    - host: *
-      http:
+    # - host: *
+    - http:
         paths:
           - path: /kubewebview
             pathType: Prefix
