mise a jour process install kubernetes

--- a/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
+++ b/k8sbfr-kube-web-view/ingress-kube-web-view.yaml
@@ -4,6 +4,7 @@ kind: Ingress
 metadata:
   name: k8sbfr-ingress-kubewebview
 spec:
+  # ingressClassName: nginx
   ingressClassName: nginx
   rules:
     # - host: k8sbfr.zapto.org
