--- a/k8sbfr-nginx/k8sbfr-configMap-nginx.yaml
+++ b/k8sbfr-nginx/k8sbfr-configMap-nginx.yaml
@@ -7,10 +7,10 @@ data:
     server {
         listen 80;
 
-        server_name your-domain.com;
+        server_name k8sbfr.zapto.org;
 
         location / {
-            proxy_pass http://<adresse-ip-ou-service-k8s>:<port>;
+            proxy_pass http://service/ingress-nginx-controller:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
